--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@prisma/adapter-better-sqlite3": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "echarts": "^6.0.0",
     "nuxt": "^4.2.2",
     "vue": "^3.5.26",
@@ -19,8 +22,11 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/node": "^25.0.3",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
+    "prisma": "^7.2.0",
     "tailwindcss": "^4.1.18"
   }
 }
