--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "anilist-stats",
   "type": "module",
   "private": true,
+  "engines": {
+    "node": "24.x"
+  },
   "scripts": {
     "dev": "nuxt dev",
 
