--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "engines": {
-    "node": "24.11.1"
+    "node": "20.x"
   },
   "scripts": {
     "dev": "nuxt dev",
