refactor: migrate from better-sqlite3 to libsql adapter, update dependencies, and streamline database import script
- Updated package.json to replace better-sqlite3 with @libsql/client and @prisma/adapter-libsql.
- Changed database connection URL in prisma.config.ts to use a local SQLite file.
- Modified schema.prisma to use "prisma-client-js" as the client provider.
- Introduced a new import script (import-to-turso.ts) for batch importing data to Turso.
- Refactored prisma.ts to accommodate the new libsql adapter.
- Enhanced anilistSync.service.ts to optimize anime and relation syncing processes.
- Removed the temporary dev.db file as it is no longer needed.

--- a/package.json
+++ b/package.json
@@ -2,24 +2,19 @@
   "name": "anilist-stats",
   "type": "module",
   "private": true,
-  "engines": {
-    "node": "20.x"
-  },
   "scripts": {
     "dev": "nuxt dev",
-
     "build": "prisma generate && nuxt build",
     "preview": "nuxt preview",
     "generate": "nuxt generate",
-
-    "postinstall": "npm rebuild better-sqlite3 --build-from-source && prisma generate",
-
+    "postinstall": "prisma generate",
     "prisma:migrate:dev": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
-    "@prisma/adapter-better-sqlite3": "^7.2.0",
+    "@libsql/client": "^0.15.15",
+    "@prisma/adapter-libsql": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
@@ -31,7 +26,6 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^25.0.3",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
