--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "anilist-stats",
   "type": "module",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
     "dev": "nuxt dev",
     "build": "prisma generate && nuxt build",
