--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "nuxt dev",
     "build": "prisma generate && nuxt build",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:verbose": "vitest run --reporter=verbose",
     "preview": "nuxt preview",
     "generate": "nuxt generate",
     "postinstall": "prisma generate",
@@ -31,6 +34,7 @@
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "prisma": "^7.2.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "vitest": "^4.0.18"
   }
 }
