feat(tests): add frontend and performance tests, enhance backend tests
- Added new frontend tests for default layout and recommendation error handling.
- Introduced performance tests for API handlers to measure throughput and cache performance.
- Updated backend tests to include additional mocks for anime genres, tags, and relations.
- Enhanced test configurations for frontend and performance testing using Vitest.
- Added new scripts in package.json for running frontend and performance tests.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "test": "vitest",
     "test:run": "vitest run",
     "test:verbose": "vitest run --reporter=verbose",
+    "test:frontend": "vitest --config vitest.frontend.config.ts",
+    "test:frontend:run": "vitest run --config vitest.frontend.config.ts",
+    "test:frontend:verbose": "vitest run --config vitest.frontend.config.ts --reporter=verbose",
+    "test:perf": "vitest run --config vitest.perf.config.ts --reporter=verbose",
+    "test:perf:live": "powershell -NoProfile -Command \"$env:VITEST_PERF_REAL_USER='1'; vitest run --config vitest.perf.config.ts --reporter=verbose\"",
+    "test:all": "npm run test:run && npm run test:frontend:run && npm run test:perf",
     "preview": "nuxt preview",
     "generate": "nuxt generate",
     "postinstall": "prisma generate",
@@ -30,8 +36,12 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^4.0.0",
     "@types/node": "^25.0.3",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.23",
+    "happy-dom": "^20.7.0",
+    "jsdom": "^28.1.0",
     "postcss": "^8.5.6",
     "prisma": "^7.2.0",
     "tailwindcss": "^4.1.18",
